yaml/of-builder-dep.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: of-builder
  namespace: openfaas
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: of-builder
    spec:
      volumes:
        - name: registry-secret
          secret:
            secretName: registry-secret
      containers:
      - name: of-builder
        image: openfaas/of-builder:0.5.0
        imagePullPolicy: Always
        environment:
          - name: enable_lchown
            value: "true"
          - name: insecure
            value: "false"
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: registry-secret
          readOnly: true
          mountPath: "/home/app/.docker/"
