yaml/of-router-dep.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: of-router
  namespace: openfaas
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: of-router
    spec:
      containers:
      - name: of-router
        image: openfaas/cloud-router:0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
