yaml/of-builder-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: of-builder
  namespace: openfaas
  labels:
    app: of-builder
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: of-builder
