yaml/of-router-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: of-router
  namespace: openfaas
  labels:
    app: of-router
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: of-router
