yaml/of_builder.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: of-builder
  namespace: openfaas
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: of-builder
    spec:
      containers:
      - name: of-builder
        image: openfaas/of-builder:0.3.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        securityContext:
          privileged: true
---
apiVersion: v1
kind: Service
metadata:
  name: of-builder
  namespace: openfaas
  labels:
    app: of-builder
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: of-builder
